fix contries not showing up on searching with uppercase

--- a/src/index.css
+++ b/src/index.css
@@ -116,7 +116,7 @@ select {
 }
 
 .country-link{
-    height: 260px;
+    height: 270px;
     width: 230px;
     margin: 30px 20px;
 }
